--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.0",
+    "@sanity/image-url": "^1.1.0",
     "next": "15.1.4",
+    "next-sanity": "^9.8.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
